<resources>
    <string name="app_name">conduit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_global_feed">Feed</string>
    <string name="menu_my_feed">My Feed</string>
    <string name="menu_auth">Login/Signup</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">userName</string>
    <string name="short_bio_about_you">Short bio about you</string>
    <string name="url_of_profile_picture">URL of profile picture</string>
    <string name="your_settings">Your Settings</string>
    <string name="arg_article_id">ARGUMENT_ID</string>
    <string name="arg_username">USERNAME</string>
    <string name="arg_article_key">ARGUMENT_ARTICLE</string>
    <string name="logout">Log Out</string>
    <string name="fab_lebel">New Article</string>
    <string name="publish_article_submit_btn">Publish Article</string>
    <string name="add_tags">Add tags</string>
    <string name="write_article_body">Write your article(in markdown)</string>
    <string name="write_Article_Description">what\'s this article about?</string>
    <string name="write_article_title">Article title</string>
    <string name="read_more">Read more...</string>
    <string name="comnt_hint">Write a comment</string>
    <string name="post_cmt">Post comment</string>
    <string name="post_arg">POST_ARG</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="favourites">Favourites</string>
    <string name="my_article">My Articles</string>
    <string name="update_article">update article</string>
    <string name="update_profile">update profile</string>


</resources>