<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_15ssp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro"
                android:padding="@dimen/_10sdp"
                android:text="@string/your_settings"
                android:textSize="@dimen/_30ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                app:boxCornerRadiusTopStart="@dimen/_5sdp"
                app:boxStrokeColor="@color/conduit_grey_darker">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_url_pfp_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="@string/url_of_profile_picture"
                    android:inputType="textUri"
                    android:textSize="@dimen/_15ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                app:boxCornerRadiusTopStart="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/_15ssp"
                    tools:text="username" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:minHeight="@dimen/_100sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                app:boxCornerRadiusTopStart="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_bio_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:gravity="top"
                    android:hint="@string/short_bio_about_you"
                    android:inputType="textMultiLine"
                    android:minHeight="@dimen/_100sdp"
                    android:textSize="@dimen/_15ssp"
                    tools:text="this demo walla bio" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                app:boxCornerRadiusTopStart="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_15ssp"
                    tools:text="something123@email.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                app:boxCornerRadiusTopStart="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="New Password"
                    android:inputType="text"
                    android:textSize="@dimen/_15ssp"
                    tools:text="newpassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/update_submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:padding="@dimen/_10sdp"
                android:text="update settings"
                android:textStyle="bold"
                app:elevation="@dimen/_10sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>