<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_15ssp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                android:background="@null"
                app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                app:boxCornerRadiusTopStart="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_article_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="@string/write_article_title"
                    android:inputType="textCapWords"
                    android:background="@null"
                    android:outlineProvider="background"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                    android:textSize="@dimen/_20ssp"
                    tools:text="Title of the Article" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                app:boxStrokeColor="@color/transparent"
                app:boxCornerRadiusTopStart="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_article_des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="@string/write_Article_Description"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
                    android:textSize="@dimen/_18ssp"
                    tools:text="Description" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:minHeight="@dimen/_100sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                app:boxCornerRadiusTopStart="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_article_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:gravity="top"
                    android:hint="@string/write_article_body"
                    android:inputType="textMultiLine|textAutoCorrect|textAutoComplete"
                    android:minHeight="@dimen/_100sdp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textSize="@dimen/_14ssp"
                    tools:text="this the  body the the article " />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_weight="1"
                    app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                    app:boxCornerRadiusTopStart="@dimen/_5sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_article_taglist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/source_sans_pro"
                        android:hint="@string/add_tags"
                        android:inputType="text"
                        android:textSize="@dimen/_14ssp"
                        tools:text="#tag #conduit #coders" />

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/addTags_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:background="@drawable/green_strock_transparent_bc"
                    android:elevation="@dimen/_5sdp"
                    android:layout_margin="@dimen/_3sdp"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/conduit_green"
                    android:textAllCaps="false"
                    android:text="@string/add_tags" />
            </LinearLayout>
<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
    android:layout_height="wrap_content"
    tools:listitem="@layout/tags_item_view"
    android:id="@+id/rvtags"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/article_submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:padding="@dimen/_10sdp"
                android:text="@string/publish_article_submit_btn"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:elevation="@dimen/_10sdp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>